--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<ul>
 			<li>Простые для детей от 1 года. Головоломка состоит из 2, 4 или 6 элементов.</li>
 			<li>Небольшие для детей от 5 лет. Изображение может быть разделено на 20-60 деталей.</li>
-			<li>Тандартные для более взрослой аудитории. Пазл может состоять из 150-300 фрагментов.</li>
+			<li>Стандартные для более взрослой аудитории. Пазл может состоять из 150-300 фрагментов.</li>
 			<li>Большие головоломки для взрослых. Игра с высокой сложностью, в которой требуется собрать картинку из 500
 				и более элементов.</li>
 		</ul>
